--- a/index.html
+++ b/index.html
@@ -1,1 +1,19 @@
+Atenção: Alerta de Spoilers!
+Enquanto Jujutsu Kaisen continua sua jornada como uma dos maiores sucessos do momento no mundo dos animes, um dos personagens da obra já caiu nas graças dos fãs
+ desde o início da história: Satoru Gojo, o sensei poderoso e vendado dos protagonistas.
 
+No entanto, ainda que você possa achar que ele vai seguir um caminho parecido com o de outros professores de anime, o Gojo já mostrou que é bem, bem mais que
+ isso. Na verdade, ele é um dos pilares da história de Jujutsu.
+
+Assim, para sanar qualquer dúvida sobre o intrigante sensei de Jujutsu Kaisen, resolvi preparar este texto. Spoilers do anime, mangá e do Vol. 0 adiante, cuidado.
+
+Coloca seus óculos escuros redondinhos, pega um doce na geladeira e vem comigo!
+
+Quem é Satoru Gojo?
+De onde vem os poderes de Satoru Gojo?
+Como funcionam os poderes de Satoru Gojo?
+Por que Satoru Gojo usa uma venda?
+Qual é a história de Satoru Gojo?
+Por que Satoru Gojo se tornou um "procurado" no mangá?
+
+Vou te mostrar agora essas respostas!
